// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PlayTimeChart Dark Mode Coverage matches snapshot for a game card in dark mode 1`] = `
<div
  className="css-sak8bt"
>
  <div
    className="css-1kgp0vl"
  >
    <div
      className="css-1avmmla"
    >
      <div
        className="css-solwvg"
      />
      <div>
        <h3
          className="css-15kivef"
        >
          Gaming Library
        </h3>
        <p
          className="css-14xu9f5"
        >
          Top 
          3
           Most Played Games
        </p>
        <div
          className="css-1s7447o"
        >
          <div
            className="css-yxli3f"
          >
            <div
              className="css-hgov20"
            />
            <span>
              1st
            </span>
          </div>
          <div
            className="css-yxli3f"
          >
            <div
              className="css-1gpukds"
            />
            <span>
              2nd
            </span>
          </div>
          <div
            className="css-yxli3f"
          >
            <div
              className="css-1lobtgo"
            />
            <span>
              3rd
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-cmxbok"
    >
      <div
        className="css-lheylh"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="css-ar1va"
        >
          <div
            className="css-1uwe4nm"
          >
            1
          </div>
          <div
            className="css-185js9c"
          >
            <img
              alt="Cities: Skylines header"
              className="css-1hlyxwi"
              src="https://example.com/cities-header.jpg"
            />
          </div>
          <div
            className="css-o4xb28"
          >
            Cities: Skylines
          </div>
        </div>
        <div
          className="css-187niig"
        >
          <div
            className="css-i79g0t"
          >
            Cities: Skylines
          </div>
          <div
            className="css-a8yoc3"
          >
            <div
              className="css-hzh2yj"
            >
              <span>
                757.35
                h total
              </span>
              <span
                className="css-11c4iyv"
              >
                #
                1
                 most played
              </span>
            </div>
            <div
              className="css-rs46q8"
            >
              <div
                className="css-k8ewr8"
              />
            </div>
            <div
              className="css-1mogv2v"
            >
              757.35
              h
            </div>
          </div>
          <div
            className="css-jdlfzx"
          >
            757h
            <span
              className="css-1m4twn"
            >
              • 
              2h
               recently
            </span>
          </div>
        </div>
      </div>
      <div
        className="css-y8dphg"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="css-ar1va"
        >
          <div
            className="css-mtl5a4"
          >
            2
          </div>
          <div
            className="css-185js9c"
          >
            <img
              alt="ARK: Survival Evolved header"
              className="css-1hlyxwi"
              src="https://example.com/ark-header.jpg"
            />
          </div>
          <div
            className="css-o4xb28"
          >
            ARK: Survival Evolved
          </div>
        </div>
        <div
          className="css-187niig"
        >
          <div
            className="css-i79g0t"
          >
            ARK: Survival Evolved
          </div>
          <div
            className="css-a8yoc3"
          >
            <div
              className="css-hzh2yj"
            >
              <span>
                277.83
                h total
              </span>
              <span
                className="css-11c4iyv"
              >
                #
                2
                 most played
              </span>
            </div>
            <div
              className="css-rs46q8"
            >
              <div
                className="css-wo5j6q"
              />
            </div>
            <div
              className="css-1mogv2v"
            >
              277.83
              h
            </div>
          </div>
          <div
            className="css-jdlfzx"
          >
            277h
          </div>
        </div>
      </div>
      <div
        className="css-1n7qq0a"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="css-ar1va"
        >
          <div
            className="css-9v2wzz"
          >
            3
          </div>
          <div
            className="css-185js9c"
          >
            <img
              alt="PUBG: BATTLEGROUNDS header"
              className="css-1hlyxwi"
              src="https://example.com/pubg-header.jpg"
            />
          </div>
          <div
            className="css-o4xb28"
          >
            PUBG: BATTLEGROUNDS
          </div>
        </div>
        <div
          className="css-187niig"
        >
          <div
            className="css-i79g0t"
          >
            PUBG: BATTLEGROUNDS
          </div>
          <div
            className="css-a8yoc3"
          >
            <div
              className="css-hzh2yj"
            >
              <span>
                200
                h total
              </span>
              <span
                className="css-11c4iyv"
              >
                #
                3
                 most played
              </span>
            </div>
            <div
              className="css-rs46q8"
            >
              <div
                className="css-121jqfe"
              />
            </div>
            <div
              className="css-1mogv2v"
            >
              200
              h
            </div>
          </div>
          <div
            className="css-jdlfzx"
          >
            200h
            <span
              className="css-1m4twn"
            >
              • 
              1h
               recently
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-rcbrnq"
    >
      <div
        className="css-aq86v7"
      >
        Total Hours:
         
        <span
          className="css-xdug5y"
        >
          1235.2
          h
        </span>
      </div>
      <div
        className="css-aq86v7"
      >
        Average:
         
        <span
          className="css-xdug5y"
        >
          411.7
          h per game
        </span>
      </div>
    </div>
    <div
      className="css-1gnkw3u"
    >
      <a
        className="css-ve6dld"
        href="#"
        rel="noopener noreferrer"
      >
        View complete gaming library
        <span>
          ViewExternal
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`PlayTimeChart Dark Mode Coverage matches snapshot for a hovered game card in dark mode 1`] = `
<div>
  <div
    class="css-sak8bt"
  >
    <div
      class="css-1kgp0vl"
    >
      <div
        class="css-1avmmla"
      >
        <div
          class="css-solwvg"
        />
        <div>
          <h3
            class="css-15kivef"
          >
            Gaming Library
          </h3>
          <p
            class="css-14xu9f5"
          >
            Top 
            3
             Most Played Games
          </p>
          <div
            class="css-1s7447o"
          >
            <div
              class="css-yxli3f"
            >
              <div
                class="css-hgov20"
              />
              <span>
                1st
              </span>
            </div>
            <div
              class="css-yxli3f"
            >
              <div
                class="css-1gpukds"
              />
              <span>
                2nd
              </span>
            </div>
            <div
              class="css-yxli3f"
            >
              <div
                class="css-1lobtgo"
              />
              <span>
                3rd
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-cmxbok"
      >
        <div
          class="css-lheylh"
        >
          <div
            class="css-ar1va"
          >
            <div
              class="css-1uwe4nm"
            >
              1
            </div>
            <div
              class="css-185js9c"
            >
              <img
                alt="Cities: Skylines header"
                class="css-1hlyxwi"
                src="https://example.com/cities-header.jpg"
              />
            </div>
            <div
              class="css-o4xb28"
            >
              Cities: Skylines
            </div>
          </div>
          <div
            class="css-187niig"
          >
            <div
              class="css-i79g0t"
            >
              Cities: Skylines
            </div>
            <div
              class="css-a8yoc3"
            >
              <div
                class="css-hzh2yj"
              >
                <span>
                  757.35
                  h total
                </span>
                <span
                  class="css-11c4iyv"
                >
                  #
                  1
                   most played
                </span>
              </div>
              <div
                class="css-rs46q8"
              >
                <div
                  class="css-k8ewr8"
                />
              </div>
              <div
                class="css-1mogv2v"
              >
                757.35
                h
              </div>
            </div>
            <div
              class="css-jdlfzx"
            >
              757h
              <span
                class="css-1m4twn"
              >
                • 
                2h
                 recently
              </span>
            </div>
          </div>
        </div>
        <div
          class="css-y8dphg"
        >
          <div
            class="css-ar1va"
          >
            <div
              class="css-mtl5a4"
            >
              2
            </div>
            <div
              class="css-185js9c"
            >
              <img
                alt="ARK: Survival Evolved header"
                class="css-1hlyxwi"
                src="https://example.com/ark-header.jpg"
              />
            </div>
            <div
              class="css-o4xb28"
            >
              ARK: Survival Evolved
            </div>
          </div>
          <div
            class="css-187niig"
          >
            <div
              class="css-i79g0t"
            >
              ARK: Survival Evolved
            </div>
            <div
              class="css-a8yoc3"
            >
              <div
                class="css-hzh2yj"
              >
                <span>
                  277.83
                  h total
                </span>
                <span
                  class="css-11c4iyv"
                >
                  #
                  2
                   most played
                </span>
              </div>
              <div
                class="css-rs46q8"
              >
                <div
                  class="css-wo5j6q"
                />
              </div>
              <div
                class="css-1mogv2v"
              >
                277.83
                h
              </div>
            </div>
            <div
              class="css-jdlfzx"
            >
              277h
            </div>
          </div>
        </div>
        <div
          class="css-1n7qq0a"
        >
          <div
            class="css-ar1va"
          >
            <div
              class="css-9v2wzz"
            >
              3
            </div>
            <div
              class="css-185js9c"
            >
              <img
                alt="PUBG: BATTLEGROUNDS header"
                class="css-1hlyxwi"
                src="https://example.com/pubg-header.jpg"
              />
            </div>
            <div
              class="css-o4xb28"
            >
              PUBG: BATTLEGROUNDS
            </div>
          </div>
          <div
            class="css-187niig"
          >
            <div
              class="css-i79g0t"
            >
              PUBG: BATTLEGROUNDS
            </div>
            <div
              class="css-a8yoc3"
            >
              <div
                class="css-hzh2yj"
              >
                <span>
                  200
                  h total
                </span>
                <span
                  class="css-11c4iyv"
                >
                  #
                  3
                   most played
                </span>
              </div>
              <div
                class="css-rs46q8"
              >
                <div
                  class="css-121jqfe"
                />
              </div>
              <div
                class="css-1mogv2v"
              >
                200
                h
              </div>
            </div>
            <div
              class="css-jdlfzx"
            >
              200h
              <span
                class="css-1m4twn"
              >
                • 
                1h
                 recently
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-rcbrnq"
      >
        <div
          class="css-aq86v7"
        >
          Total Hours:
           
          <span
            class="css-xdug5y"
          >
            1235.2
            h
          </span>
        </div>
        <div
          class="css-aq86v7"
        >
          Average:
           
          <span
            class="css-xdug5y"
          >
            411.7
            h per game
          </span>
        </div>
      </div>
      <div
        class="css-1gnkw3u"
      >
        <a
          class="css-ve6dld"
          href="#"
          rel="noopener noreferrer"
        >
          View complete gaming library
          <span>
            ViewExternal
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`PlayTimeChart Data Processing filters out games with zero playtime 1`] = `
<div
  className="css-sak8bt"
>
  <div
    className="css-1kgp0vl"
  >
    <div
      className="css-1avmmla"
    >
      <div
        className="css-solwvg"
      />
      <div>
        <h3
          className="css-15kivef"
        >
          Gaming Library
        </h3>
        <p
          className="css-14xu9f5"
        >
          Top 
          3
           Most Played Games
        </p>
        <div
          className="css-1s7447o"
        >
          <div
            className="css-yxli3f"
          >
            <div
              className="css-hgov20"
            />
            <span>
              1st
            </span>
          </div>
          <div
            className="css-yxli3f"
          >
            <div
              className="css-1gpukds"
            />
            <span>
              2nd
            </span>
          </div>
          <div
            className="css-yxli3f"
          >
            <div
              className="css-1lobtgo"
            />
            <span>
              3rd
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-cmxbok"
    >
      <div
        className="css-lheylh"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="css-ar1va"
        >
          <div
            className="css-1uwe4nm"
          >
            1
          </div>
          <div
            className="css-185js9c"
          >
            <img
              alt="Cities: Skylines header"
              className="css-1hlyxwi"
              src="https://example.com/cities-header.jpg"
            />
          </div>
          <div
            className="css-o4xb28"
          >
            Cities: Skylines
          </div>
        </div>
        <div
          className="css-187niig"
        >
          <div
            className="css-i79g0t"
          >
            Cities: Skylines
          </div>
          <div
            className="css-a8yoc3"
          >
            <div
              className="css-hzh2yj"
            >
              <span>
                757.35
                h total
              </span>
              <span
                className="css-11c4iyv"
              >
                #
                1
                 most played
              </span>
            </div>
            <div
              className="css-rs46q8"
            >
              <div
                className="css-k8ewr8"
              />
            </div>
            <div
              className="css-1mogv2v"
            >
              757.35
              h
            </div>
          </div>
          <div
            className="css-jdlfzx"
          >
            757h
            <span
              className="css-1m4twn"
            >
              • 
              2h
               recently
            </span>
          </div>
        </div>
      </div>
      <div
        className="css-y8dphg"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="css-ar1va"
        >
          <div
            className="css-mtl5a4"
          >
            2
          </div>
          <div
            className="css-185js9c"
          >
            <img
              alt="ARK: Survival Evolved header"
              className="css-1hlyxwi"
              src="https://example.com/ark-header.jpg"
            />
          </div>
          <div
            className="css-o4xb28"
          >
            ARK: Survival Evolved
          </div>
        </div>
        <div
          className="css-187niig"
        >
          <div
            className="css-i79g0t"
          >
            ARK: Survival Evolved
          </div>
          <div
            className="css-a8yoc3"
          >
            <div
              className="css-hzh2yj"
            >
              <span>
                277.83
                h total
              </span>
              <span
                className="css-11c4iyv"
              >
                #
                2
                 most played
              </span>
            </div>
            <div
              className="css-rs46q8"
            >
              <div
                className="css-wo5j6q"
              />
            </div>
            <div
              className="css-1mogv2v"
            >
              277.83
              h
            </div>
          </div>
          <div
            className="css-jdlfzx"
          >
            277h
          </div>
        </div>
      </div>
      <div
        className="css-1n7qq0a"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="css-ar1va"
        >
          <div
            className="css-9v2wzz"
          >
            3
          </div>
          <div
            className="css-185js9c"
          >
            <img
              alt="PUBG: BATTLEGROUNDS header"
              className="css-1hlyxwi"
              src="https://example.com/pubg-header.jpg"
            />
          </div>
          <div
            className="css-o4xb28"
          >
            PUBG: BATTLEGROUNDS
          </div>
        </div>
        <div
          className="css-187niig"
        >
          <div
            className="css-i79g0t"
          >
            PUBG: BATTLEGROUNDS
          </div>
          <div
            className="css-a8yoc3"
          >
            <div
              className="css-hzh2yj"
            >
              <span>
                200
                h total
              </span>
              <span
                className="css-11c4iyv"
              >
                #
                3
                 most played
              </span>
            </div>
            <div
              className="css-rs46q8"
            >
              <div
                className="css-121jqfe"
              />
            </div>
            <div
              className="css-1mogv2v"
            >
              200
              h
            </div>
          </div>
          <div
            className="css-jdlfzx"
          >
            200h
            <span
              className="css-1m4twn"
            >
              • 
              1h
               recently
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-rcbrnq"
    >
      <div
        className="css-aq86v7"
      >
        Total Hours:
         
        <span
          className="css-xdug5y"
        >
          1235.2
          h
        </span>
      </div>
      <div
        className="css-aq86v7"
      >
        Average:
         
        <span
          className="css-xdug5y"
        >
          411.7
          h per game
        </span>
      </div>
    </div>
    <div
      className="css-1gnkw3u"
    >
      <a
        className="css-ve6dld"
        href="#"
        rel="noopener noreferrer"
      >
        View complete gaming library
        <span>
          ViewExternal
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`PlayTimeChart Data Processing renders correctly with sample data 1`] = `
<div
  className="css-sak8bt"
>
  <div
    className="css-1kgp0vl"
  >
    <div
      className="css-1avmmla"
    >
      <div
        className="css-solwvg"
      />
      <div>
        <h3
          className="css-15kivef"
        >
          Gaming Library
        </h3>
        <p
          className="css-14xu9f5"
        >
          Top 
          3
           Most Played Games
        </p>
        <div
          className="css-1s7447o"
        >
          <div
            className="css-yxli3f"
          >
            <div
              className="css-hgov20"
            />
            <span>
              1st
            </span>
          </div>
          <div
            className="css-yxli3f"
          >
            <div
              className="css-1gpukds"
            />
            <span>
              2nd
            </span>
          </div>
          <div
            className="css-yxli3f"
          >
            <div
              className="css-1lobtgo"
            />
            <span>
              3rd
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-cmxbok"
    >
      <div
        className="css-lheylh"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="css-ar1va"
        >
          <div
            className="css-1uwe4nm"
          >
            1
          </div>
          <div
            className="css-185js9c"
          >
            <img
              alt="Cities: Skylines header"
              className="css-1hlyxwi"
              src="https://example.com/cities-header.jpg"
            />
          </div>
          <div
            className="css-o4xb28"
          >
            Cities: Skylines
          </div>
        </div>
        <div
          className="css-187niig"
        >
          <div
            className="css-i79g0t"
          >
            Cities: Skylines
          </div>
          <div
            className="css-a8yoc3"
          >
            <div
              className="css-hzh2yj"
            >
              <span>
                757.35
                h total
              </span>
              <span
                className="css-11c4iyv"
              >
                #
                1
                 most played
              </span>
            </div>
            <div
              className="css-rs46q8"
            >
              <div
                className="css-k8ewr8"
              />
            </div>
            <div
              className="css-1mogv2v"
            >
              757.35
              h
            </div>
          </div>
          <div
            className="css-jdlfzx"
          >
            757h
            <span
              className="css-1m4twn"
            >
              • 
              2h
               recently
            </span>
          </div>
        </div>
      </div>
      <div
        className="css-y8dphg"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="css-ar1va"
        >
          <div
            className="css-mtl5a4"
          >
            2
          </div>
          <div
            className="css-185js9c"
          >
            <img
              alt="ARK: Survival Evolved header"
              className="css-1hlyxwi"
              src="https://example.com/ark-header.jpg"
            />
          </div>
          <div
            className="css-o4xb28"
          >
            ARK: Survival Evolved
          </div>
        </div>
        <div
          className="css-187niig"
        >
          <div
            className="css-i79g0t"
          >
            ARK: Survival Evolved
          </div>
          <div
            className="css-a8yoc3"
          >
            <div
              className="css-hzh2yj"
            >
              <span>
                277.83
                h total
              </span>
              <span
                className="css-11c4iyv"
              >
                #
                2
                 most played
              </span>
            </div>
            <div
              className="css-rs46q8"
            >
              <div
                className="css-wo5j6q"
              />
            </div>
            <div
              className="css-1mogv2v"
            >
              277.83
              h
            </div>
          </div>
          <div
            className="css-jdlfzx"
          >
            277h
          </div>
        </div>
      </div>
      <div
        className="css-1n7qq0a"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="css-ar1va"
        >
          <div
            className="css-9v2wzz"
          >
            3
          </div>
          <div
            className="css-185js9c"
          >
            <img
              alt="PUBG: BATTLEGROUNDS header"
              className="css-1hlyxwi"
              src="https://example.com/pubg-header.jpg"
            />
          </div>
          <div
            className="css-o4xb28"
          >
            PUBG: BATTLEGROUNDS
          </div>
        </div>
        <div
          className="css-187niig"
        >
          <div
            className="css-i79g0t"
          >
            PUBG: BATTLEGROUNDS
          </div>
          <div
            className="css-a8yoc3"
          >
            <div
              className="css-hzh2yj"
            >
              <span>
                200
                h total
              </span>
              <span
                className="css-11c4iyv"
              >
                #
                3
                 most played
              </span>
            </div>
            <div
              className="css-rs46q8"
            >
              <div
                className="css-121jqfe"
              />
            </div>
            <div
              className="css-1mogv2v"
            >
              200
              h
            </div>
          </div>
          <div
            className="css-jdlfzx"
          >
            200h
            <span
              className="css-1m4twn"
            >
              • 
              1h
               recently
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-rcbrnq"
    >
      <div
        className="css-aq86v7"
      >
        Total Hours:
         
        <span
          className="css-xdug5y"
        >
          1235.2
          h
        </span>
      </div>
      <div
        className="css-aq86v7"
      >
        Average:
         
        <span
          className="css-xdug5y"
        >
          411.7
          h per game
        </span>
      </div>
    </div>
    <div
      className="css-1gnkw3u"
    >
      <a
        className="css-ve6dld"
        href="#"
        rel="noopener noreferrer"
      >
        View complete gaming library
        <span>
          ViewExternal
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`PlayTimeChart Edge Cases handles single game scenario 1`] = `
<div
  className="css-sak8bt"
>
  <div
    className="css-1kgp0vl"
  >
    <div
      className="css-1avmmla"
    >
      <div
        className="css-solwvg"
      />
      <div>
        <h3
          className="css-15kivef"
        >
          Gaming Library
        </h3>
        <p
          className="css-14xu9f5"
        >
          Top 
          1
           Most Played Games
        </p>
        <div
          className="css-1s7447o"
        >
          <div
            className="css-yxli3f"
          >
            <div
              className="css-hgov20"
            />
            <span>
              1st
            </span>
          </div>
          <div
            className="css-yxli3f"
          >
            <div
              className="css-1gpukds"
            />
            <span>
              2nd
            </span>
          </div>
          <div
            className="css-yxli3f"
          >
            <div
              className="css-1lobtgo"
            />
            <span>
              3rd
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-cmxbok"
    >
      <div
        className="css-lheylh"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="css-ar1va"
        >
          <div
            className="css-1uwe4nm"
          >
            1
          </div>
          <div
            className="css-185js9c"
          >
            <img
              alt="Cities: Skylines header"
              className="css-1hlyxwi"
              src="https://example.com/cities-header.jpg"
            />
          </div>
          <div
            className="css-o4xb28"
          >
            Cities: Skylines
          </div>
        </div>
        <div
          className="css-187niig"
        >
          <div
            className="css-i79g0t"
          >
            Cities: Skylines
          </div>
          <div
            className="css-a8yoc3"
          >
            <div
              className="css-hzh2yj"
            >
              <span>
                757.35
                h total
              </span>
              <span
                className="css-11c4iyv"
              >
                #
                1
                 most played
              </span>
            </div>
            <div
              className="css-rs46q8"
            >
              <div
                className="css-k8ewr8"
              />
            </div>
            <div
              className="css-1mogv2v"
            >
              757.35
              h
            </div>
          </div>
          <div
            className="css-jdlfzx"
          >
            757h
            <span
              className="css-1m4twn"
            >
              • 
              2h
               recently
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-rcbrnq"
    >
      <div
        className="css-aq86v7"
      >
        Total Hours:
         
        <span
          className="css-xdug5y"
        >
          757.4
          h
        </span>
      </div>
      <div
        className="css-aq86v7"
      >
        Average:
         
        <span
          className="css-xdug5y"
        >
          757.4
          h per game
        </span>
      </div>
    </div>
    <div
      className="css-1gnkw3u"
    >
      <a
        className="css-ve6dld"
        href="#"
        rel="noopener noreferrer"
      >
        View complete gaming library
        <span>
          ViewExternal
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`PlayTimeChart Empty States renders empty state when games is null 1`] = `
<div
  className="css-sak8bt"
>
  <div
    className="css-1c1lvow"
  >
    <p
      className="css-13s56l1"
    >
      No gaming data available for library.
    </p>
  </div>
</div>
`;

exports[`PlayTimeChart Empty States renders empty state when games is undefined 1`] = `
<div
  className="css-sak8bt"
>
  <div
    className="css-1c1lvow"
  >
    <p
      className="css-13s56l1"
    >
      No gaming data available for library.
    </p>
  </div>
</div>
`;

exports[`PlayTimeChart Empty States renders empty state when no games provided 1`] = `
<div
  className="css-sak8bt"
>
  <div
    className="css-1c1lvow"
  >
    <p
      className="css-13s56l1"
    >
      No gaming data available for library.
    </p>
  </div>
</div>
`;

exports[`PlayTimeChart Light Mode Coverage matches snapshot for a game card in light mode 1`] = `
<div
  className="css-sak8bt"
>
  <div
    className="css-1kgp0vl"
  >
    <div
      className="css-1avmmla"
    >
      <div
        className="css-solwvg"
      />
      <div>
        <h3
          className="css-15kivef"
        >
          Gaming Library
        </h3>
        <p
          className="css-14xu9f5"
        >
          Top 
          3
           Most Played Games
        </p>
        <div
          className="css-1s7447o"
        >
          <div
            className="css-yxli3f"
          >
            <div
              className="css-hgov20"
            />
            <span>
              1st
            </span>
          </div>
          <div
            className="css-yxli3f"
          >
            <div
              className="css-1gpukds"
            />
            <span>
              2nd
            </span>
          </div>
          <div
            className="css-yxli3f"
          >
            <div
              className="css-1lobtgo"
            />
            <span>
              3rd
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-cmxbok"
    >
      <div
        className="css-lheylh"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="css-ar1va"
        >
          <div
            className="css-1uwe4nm"
          >
            1
          </div>
          <div
            className="css-185js9c"
          >
            <img
              alt="Cities: Skylines header"
              className="css-1hlyxwi"
              src="https://example.com/cities-header.jpg"
            />
          </div>
          <div
            className="css-o4xb28"
          >
            Cities: Skylines
          </div>
        </div>
        <div
          className="css-187niig"
        >
          <div
            className="css-i79g0t"
          >
            Cities: Skylines
          </div>
          <div
            className="css-a8yoc3"
          >
            <div
              className="css-hzh2yj"
            >
              <span>
                757.35
                h total
              </span>
              <span
                className="css-11c4iyv"
              >
                #
                1
                 most played
              </span>
            </div>
            <div
              className="css-rs46q8"
            >
              <div
                className="css-k8ewr8"
              />
            </div>
            <div
              className="css-1mogv2v"
            >
              757.35
              h
            </div>
          </div>
          <div
            className="css-jdlfzx"
          >
            757h
            <span
              className="css-1m4twn"
            >
              • 
              2h
               recently
            </span>
          </div>
        </div>
      </div>
      <div
        className="css-y8dphg"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="css-ar1va"
        >
          <div
            className="css-mtl5a4"
          >
            2
          </div>
          <div
            className="css-185js9c"
          >
            <img
              alt="ARK: Survival Evolved header"
              className="css-1hlyxwi"
              src="https://example.com/ark-header.jpg"
            />
          </div>
          <div
            className="css-o4xb28"
          >
            ARK: Survival Evolved
          </div>
        </div>
        <div
          className="css-187niig"
        >
          <div
            className="css-i79g0t"
          >
            ARK: Survival Evolved
          </div>
          <div
            className="css-a8yoc3"
          >
            <div
              className="css-hzh2yj"
            >
              <span>
                277.83
                h total
              </span>
              <span
                className="css-11c4iyv"
              >
                #
                2
                 most played
              </span>
            </div>
            <div
              className="css-rs46q8"
            >
              <div
                className="css-wo5j6q"
              />
            </div>
            <div
              className="css-1mogv2v"
            >
              277.83
              h
            </div>
          </div>
          <div
            className="css-jdlfzx"
          >
            277h
          </div>
        </div>
      </div>
      <div
        className="css-1n7qq0a"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="css-ar1va"
        >
          <div
            className="css-9v2wzz"
          >
            3
          </div>
          <div
            className="css-185js9c"
          >
            <img
              alt="PUBG: BATTLEGROUNDS header"
              className="css-1hlyxwi"
              src="https://example.com/pubg-header.jpg"
            />
          </div>
          <div
            className="css-o4xb28"
          >
            PUBG: BATTLEGROUNDS
          </div>
        </div>
        <div
          className="css-187niig"
        >
          <div
            className="css-i79g0t"
          >
            PUBG: BATTLEGROUNDS
          </div>
          <div
            className="css-a8yoc3"
          >
            <div
              className="css-hzh2yj"
            >
              <span>
                200
                h total
              </span>
              <span
                className="css-11c4iyv"
              >
                #
                3
                 most played
              </span>
            </div>
            <div
              className="css-rs46q8"
            >
              <div
                className="css-121jqfe"
              />
            </div>
            <div
              className="css-1mogv2v"
            >
              200
              h
            </div>
          </div>
          <div
            className="css-jdlfzx"
          >
            200h
            <span
              className="css-1m4twn"
            >
              • 
              1h
               recently
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-rcbrnq"
    >
      <div
        className="css-aq86v7"
      >
        Total Hours:
         
        <span
          className="css-xdug5y"
        >
          1235.2
          h
        </span>
      </div>
      <div
        className="css-aq86v7"
      >
        Average:
         
        <span
          className="css-xdug5y"
        >
          411.7
          h per game
        </span>
      </div>
    </div>
    <div
      className="css-1gnkw3u"
    >
      <a
        className="css-ve6dld"
        href="#"
        rel="noopener noreferrer"
      >
        View complete gaming library
        <span>
          ViewExternal
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`PlayTimeChart Light Mode Coverage matches snapshot for a hovered game card in light mode 1`] = `
<div>
  <div
    class="css-sak8bt"
  >
    <div
      class="css-1kgp0vl"
    >
      <div
        class="css-1avmmla"
      >
        <div
          class="css-solwvg"
        />
        <div>
          <h3
            class="css-15kivef"
          >
            Gaming Library
          </h3>
          <p
            class="css-14xu9f5"
          >
            Top 
            3
             Most Played Games
          </p>
          <div
            class="css-1s7447o"
          >
            <div
              class="css-yxli3f"
            >
              <div
                class="css-hgov20"
              />
              <span>
                1st
              </span>
            </div>
            <div
              class="css-yxli3f"
            >
              <div
                class="css-1gpukds"
              />
              <span>
                2nd
              </span>
            </div>
            <div
              class="css-yxli3f"
            >
              <div
                class="css-1lobtgo"
              />
              <span>
                3rd
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-cmxbok"
      >
        <div
          class="css-lheylh"
        >
          <div
            class="css-ar1va"
          >
            <div
              class="css-1uwe4nm"
            >
              1
            </div>
            <div
              class="css-185js9c"
            >
              <img
                alt="Cities: Skylines header"
                class="css-1hlyxwi"
                src="https://example.com/cities-header.jpg"
              />
            </div>
            <div
              class="css-o4xb28"
            >
              Cities: Skylines
            </div>
          </div>
          <div
            class="css-187niig"
          >
            <div
              class="css-i79g0t"
            >
              Cities: Skylines
            </div>
            <div
              class="css-a8yoc3"
            >
              <div
                class="css-hzh2yj"
              >
                <span>
                  757.35
                  h total
                </span>
                <span
                  class="css-11c4iyv"
                >
                  #
                  1
                   most played
                </span>
              </div>
              <div
                class="css-rs46q8"
              >
                <div
                  class="css-k8ewr8"
                />
              </div>
              <div
                class="css-1mogv2v"
              >
                757.35
                h
              </div>
            </div>
            <div
              class="css-jdlfzx"
            >
              757h
              <span
                class="css-1m4twn"
              >
                • 
                2h
                 recently
              </span>
            </div>
          </div>
        </div>
        <div
          class="css-y8dphg"
        >
          <div
            class="css-ar1va"
          >
            <div
              class="css-mtl5a4"
            >
              2
            </div>
            <div
              class="css-185js9c"
            >
              <img
                alt="ARK: Survival Evolved header"
                class="css-1hlyxwi"
                src="https://example.com/ark-header.jpg"
              />
            </div>
            <div
              class="css-o4xb28"
            >
              ARK: Survival Evolved
            </div>
          </div>
          <div
            class="css-187niig"
          >
            <div
              class="css-i79g0t"
            >
              ARK: Survival Evolved
            </div>
            <div
              class="css-a8yoc3"
            >
              <div
                class="css-hzh2yj"
              >
                <span>
                  277.83
                  h total
                </span>
                <span
                  class="css-11c4iyv"
                >
                  #
                  2
                   most played
                </span>
              </div>
              <div
                class="css-rs46q8"
              >
                <div
                  class="css-wo5j6q"
                />
              </div>
              <div
                class="css-1mogv2v"
              >
                277.83
                h
              </div>
            </div>
            <div
              class="css-jdlfzx"
            >
              277h
            </div>
          </div>
        </div>
        <div
          class="css-1n7qq0a"
        >
          <div
            class="css-ar1va"
          >
            <div
              class="css-9v2wzz"
            >
              3
            </div>
            <div
              class="css-185js9c"
            >
              <img
                alt="PUBG: BATTLEGROUNDS header"
                class="css-1hlyxwi"
                src="https://example.com/pubg-header.jpg"
              />
            </div>
            <div
              class="css-o4xb28"
            >
              PUBG: BATTLEGROUNDS
            </div>
          </div>
          <div
            class="css-187niig"
          >
            <div
              class="css-i79g0t"
            >
              PUBG: BATTLEGROUNDS
            </div>
            <div
              class="css-a8yoc3"
            >
              <div
                class="css-hzh2yj"
              >
                <span>
                  200
                  h total
                </span>
                <span
                  class="css-11c4iyv"
                >
                  #
                  3
                   most played
                </span>
              </div>
              <div
                class="css-rs46q8"
              >
                <div
                  class="css-121jqfe"
                />
              </div>
              <div
                class="css-1mogv2v"
              >
                200
                h
              </div>
            </div>
            <div
              class="css-jdlfzx"
            >
              200h
              <span
                class="css-1m4twn"
              >
                • 
                1h
                 recently
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-rcbrnq"
      >
        <div
          class="css-aq86v7"
        >
          Total Hours:
           
          <span
            class="css-xdug5y"
          >
            1235.2
            h
          </span>
        </div>
        <div
          class="css-aq86v7"
        >
          Average:
           
          <span
            class="css-xdug5y"
          >
            411.7
            h per game
          </span>
        </div>
      </div>
      <div
        class="css-1gnkw3u"
      >
        <a
          class="css-ve6dld"
          href="#"
          rel="noopener noreferrer"
        >
          View complete gaming library
          <span>
            ViewExternal
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`PlayTimeChart Loading State renders loading state correctly 1`] = `
<div
  className="css-sak8bt"
>
  <div
    className="css-1bqz2bo"
  >
    <div
      className="css-nyc2gr"
    >
      <div
        className="css-1omu3y4"
      />
      <p
        className="css-1ylq8j3"
      >
        Loading Gaming Library...
      </p>
    </div>
  </div>
</div>
`;

exports[`PlayTimeChart Theme Integration adapts to dark mode styling 1`] = `
<div
  className="css-sak8bt"
>
  <div
    className="css-1kgp0vl"
  >
    <div
      className="css-1avmmla"
    >
      <div
        className="css-solwvg"
      />
      <div>
        <h3
          className="css-15kivef"
        >
          Gaming Library
        </h3>
        <p
          className="css-14xu9f5"
        >
          Top 
          3
           Most Played Games
        </p>
        <div
          className="css-1s7447o"
        >
          <div
            className="css-yxli3f"
          >
            <div
              className="css-hgov20"
            />
            <span>
              1st
            </span>
          </div>
          <div
            className="css-yxli3f"
          >
            <div
              className="css-1gpukds"
            />
            <span>
              2nd
            </span>
          </div>
          <div
            className="css-yxli3f"
          >
            <div
              className="css-1lobtgo"
            />
            <span>
              3rd
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-cmxbok"
    >
      <div
        className="css-lheylh"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="css-ar1va"
        >
          <div
            className="css-1uwe4nm"
          >
            1
          </div>
          <div
            className="css-185js9c"
          >
            <img
              alt="Cities: Skylines header"
              className="css-1hlyxwi"
              src="https://example.com/cities-header.jpg"
            />
          </div>
          <div
            className="css-o4xb28"
          >
            Cities: Skylines
          </div>
        </div>
        <div
          className="css-187niig"
        >
          <div
            className="css-i79g0t"
          >
            Cities: Skylines
          </div>
          <div
            className="css-a8yoc3"
          >
            <div
              className="css-hzh2yj"
            >
              <span>
                757.35
                h total
              </span>
              <span
                className="css-11c4iyv"
              >
                #
                1
                 most played
              </span>
            </div>
            <div
              className="css-rs46q8"
            >
              <div
                className="css-k8ewr8"
              />
            </div>
            <div
              className="css-1mogv2v"
            >
              757.35
              h
            </div>
          </div>
          <div
            className="css-jdlfzx"
          >
            757h
            <span
              className="css-1m4twn"
            >
              • 
              2h
               recently
            </span>
          </div>
        </div>
      </div>
      <div
        className="css-y8dphg"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="css-ar1va"
        >
          <div
            className="css-mtl5a4"
          >
            2
          </div>
          <div
            className="css-185js9c"
          >
            <img
              alt="ARK: Survival Evolved header"
              className="css-1hlyxwi"
              src="https://example.com/ark-header.jpg"
            />
          </div>
          <div
            className="css-o4xb28"
          >
            ARK: Survival Evolved
          </div>
        </div>
        <div
          className="css-187niig"
        >
          <div
            className="css-i79g0t"
          >
            ARK: Survival Evolved
          </div>
          <div
            className="css-a8yoc3"
          >
            <div
              className="css-hzh2yj"
            >
              <span>
                277.83
                h total
              </span>
              <span
                className="css-11c4iyv"
              >
                #
                2
                 most played
              </span>
            </div>
            <div
              className="css-rs46q8"
            >
              <div
                className="css-wo5j6q"
              />
            </div>
            <div
              className="css-1mogv2v"
            >
              277.83
              h
            </div>
          </div>
          <div
            className="css-jdlfzx"
          >
            277h
          </div>
        </div>
      </div>
      <div
        className="css-1n7qq0a"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="css-ar1va"
        >
          <div
            className="css-9v2wzz"
          >
            3
          </div>
          <div
            className="css-185js9c"
          >
            <img
              alt="PUBG: BATTLEGROUNDS header"
              className="css-1hlyxwi"
              src="https://example.com/pubg-header.jpg"
            />
          </div>
          <div
            className="css-o4xb28"
          >
            PUBG: BATTLEGROUNDS
          </div>
        </div>
        <div
          className="css-187niig"
        >
          <div
            className="css-i79g0t"
          >
            PUBG: BATTLEGROUNDS
          </div>
          <div
            className="css-a8yoc3"
          >
            <div
              className="css-hzh2yj"
            >
              <span>
                200
                h total
              </span>
              <span
                className="css-11c4iyv"
              >
                #
                3
                 most played
              </span>
            </div>
            <div
              className="css-rs46q8"
            >
              <div
                className="css-121jqfe"
              />
            </div>
            <div
              className="css-1mogv2v"
            >
              200
              h
            </div>
          </div>
          <div
            className="css-jdlfzx"
          >
            200h
            <span
              className="css-1m4twn"
            >
              • 
              1h
               recently
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-rcbrnq"
    >
      <div
        className="css-aq86v7"
      >
        Total Hours:
         
        <span
          className="css-xdug5y"
        >
          1235.2
          h
        </span>
      </div>
      <div
        className="css-aq86v7"
      >
        Average:
         
        <span
          className="css-xdug5y"
        >
          411.7
          h per game
        </span>
      </div>
    </div>
    <div
      className="css-1gnkw3u"
    >
      <a
        className="css-ve6dld"
        href="#"
        rel="noopener noreferrer"
      >
        View complete gaming library
        <span>
          ViewExternal
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`PlayTimeChart Theme Integration renders correctly in light mode 1`] = `
<div
  className="css-sak8bt"
>
  <div
    className="css-1kgp0vl"
  >
    <div
      className="css-1avmmla"
    >
      <div
        className="css-solwvg"
      />
      <div>
        <h3
          className="css-15kivef"
        >
          Gaming Library
        </h3>
        <p
          className="css-14xu9f5"
        >
          Top 
          3
           Most Played Games
        </p>
        <div
          className="css-1s7447o"
        >
          <div
            className="css-yxli3f"
          >
            <div
              className="css-hgov20"
            />
            <span>
              1st
            </span>
          </div>
          <div
            className="css-yxli3f"
          >
            <div
              className="css-1gpukds"
            />
            <span>
              2nd
            </span>
          </div>
          <div
            className="css-yxli3f"
          >
            <div
              className="css-1lobtgo"
            />
            <span>
              3rd
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-cmxbok"
    >
      <div
        className="css-lheylh"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="css-ar1va"
        >
          <div
            className="css-1uwe4nm"
          >
            1
          </div>
          <div
            className="css-185js9c"
          >
            <img
              alt="Cities: Skylines header"
              className="css-1hlyxwi"
              src="https://example.com/cities-header.jpg"
            />
          </div>
          <div
            className="css-o4xb28"
          >
            Cities: Skylines
          </div>
        </div>
        <div
          className="css-187niig"
        >
          <div
            className="css-i79g0t"
          >
            Cities: Skylines
          </div>
          <div
            className="css-a8yoc3"
          >
            <div
              className="css-hzh2yj"
            >
              <span>
                757.35
                h total
              </span>
              <span
                className="css-11c4iyv"
              >
                #
                1
                 most played
              </span>
            </div>
            <div
              className="css-rs46q8"
            >
              <div
                className="css-k8ewr8"
              />
            </div>
            <div
              className="css-1mogv2v"
            >
              757.35
              h
            </div>
          </div>
          <div
            className="css-jdlfzx"
          >
            757h
            <span
              className="css-1m4twn"
            >
              • 
              2h
               recently
            </span>
          </div>
        </div>
      </div>
      <div
        className="css-y8dphg"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="css-ar1va"
        >
          <div
            className="css-mtl5a4"
          >
            2
          </div>
          <div
            className="css-185js9c"
          >
            <img
              alt="ARK: Survival Evolved header"
              className="css-1hlyxwi"
              src="https://example.com/ark-header.jpg"
            />
          </div>
          <div
            className="css-o4xb28"
          >
            ARK: Survival Evolved
          </div>
        </div>
        <div
          className="css-187niig"
        >
          <div
            className="css-i79g0t"
          >
            ARK: Survival Evolved
          </div>
          <div
            className="css-a8yoc3"
          >
            <div
              className="css-hzh2yj"
            >
              <span>
                277.83
                h total
              </span>
              <span
                className="css-11c4iyv"
              >
                #
                2
                 most played
              </span>
            </div>
            <div
              className="css-rs46q8"
            >
              <div
                className="css-wo5j6q"
              />
            </div>
            <div
              className="css-1mogv2v"
            >
              277.83
              h
            </div>
          </div>
          <div
            className="css-jdlfzx"
          >
            277h
          </div>
        </div>
      </div>
      <div
        className="css-1n7qq0a"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="css-ar1va"
        >
          <div
            className="css-9v2wzz"
          >
            3
          </div>
          <div
            className="css-185js9c"
          >
            <img
              alt="PUBG: BATTLEGROUNDS header"
              className="css-1hlyxwi"
              src="https://example.com/pubg-header.jpg"
            />
          </div>
          <div
            className="css-o4xb28"
          >
            PUBG: BATTLEGROUNDS
          </div>
        </div>
        <div
          className="css-187niig"
        >
          <div
            className="css-i79g0t"
          >
            PUBG: BATTLEGROUNDS
          </div>
          <div
            className="css-a8yoc3"
          >
            <div
              className="css-hzh2yj"
            >
              <span>
                200
                h total
              </span>
              <span
                className="css-11c4iyv"
              >
                #
                3
                 most played
              </span>
            </div>
            <div
              className="css-rs46q8"
            >
              <div
                className="css-121jqfe"
              />
            </div>
            <div
              className="css-1mogv2v"
            >
              200
              h
            </div>
          </div>
          <div
            className="css-jdlfzx"
          >
            200h
            <span
              className="css-1m4twn"
            >
              • 
              1h
               recently
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-rcbrnq"
    >
      <div
        className="css-aq86v7"
      >
        Total Hours:
         
        <span
          className="css-xdug5y"
        >
          1235.2
          h
        </span>
      </div>
      <div
        className="css-aq86v7"
      >
        Average:
         
        <span
          className="css-xdug5y"
        >
          411.7
          h per game
        </span>
      </div>
    </div>
    <div
      className="css-1gnkw3u"
    >
      <a
        className="css-ve6dld"
        href="#"
        rel="noopener noreferrer"
      >
        View complete gaming library
        <span>
          ViewExternal
        </span>
      </a>
    </div>
  </div>
</div>
`;
